# jeli-asr

./: .gitignore  DICTIONARY.md  ISSUES.md  README.md  TODO.md  adjustments.md  pyproject.toml  setup.cfg  setup.py
asr/: README.md
asr/wav2vec/: bambara_griots_fine_tune_xlsr_wav2vec2_cv_2.py  test.csv  train.csv  vocab.json
docs/: README.old.md  requirements.txt  utterances.md  workflow.md
inference/: TODO.md
inference/griots_r1/: gr1_1.pfsx  gr1_2.pfsx  gr1_5.pfsx  gr1_6.pfsx  griots_r1_3.eaf  griots_r1_6.eaf
inference/griots_r10/: gr10_2_copie.eaf  gr10_2_copie_2.eaf  gr10_3.eaf  gr10_6.eaf  griots_r10_3_copie.eaf
inference/griots_r11/: gr11_2.eaf  gr11_3.eaf  gr11_6.eaf
inference/griots_r12/: gr12_5.eaf
inference/griots_r13/: gr13_1.eaf  gr13_3.eaf  gr13_4.eaf  griots_r13_5.eaf
inference/griots_r14/: gr14_4.eaf  gr14_6.eaf
inference/griots_r15/: griots_r15_1.eaf
inference/griots_r16/: gr16_3.eaf  gr16_5_copie.eaf  gr16_6.eaf  griots_r16_4.eaf
inference/griots_r17/: gr17_3.eaf  gr17_4.eaf  (+1 more)
jeli/: LICENSE  TODO.md  config  meta.json
revision/: griots_r1.tsv  griots_r10.tsv  griots_r11.tsv  griots_r12.tsv  griots_r13.tsv  griots_r14.tsv  griots_r15.tsv  griots_r16.tsv  griots_r17.tsv  griots_r18.tsv  griots_r19.tsv  griots_r2.tsv  griots_r20.tsv  griots_r21.tsv  griots_r22.tsv  griots_r23.tsv  griots_r24.tsv  griots_r25.tsv  griots_r26.tsv  griots_r27.tsv  griots_r28.tsv  griots_r29.tsv  griots_r3.tsv  griots_r30.tsv  griots_r4.tsv  griots_r5.tsv  griots_r6.tsv  griots_r7.tsv  griots_r8.tsv  griots_r9.tsv
tools/: TODO.md
train/: upload.sh
(+464 files in other folders)
