[metadata]
name = jelipkg
version = 0.0.1
author = Sebastien Diarra
author_email = sdiarra@robotsmali.org
url = https://github.com/robotsmali-ai/jeli-asr
description = Griots Dataset Management Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
keyword = NLP, ASR, MT, ML, Bambara, Dataset
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Text Processing :: Machine Learning :: Automatic Speech Recognition
    Natural Language :: Bambara
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: CC-BY-4.0 International :: MIT License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    inquirerpy
    wget
    pydub
    pympi-ling

[options.entry_points]
console_scripts =
    jelipkg = jeli.cli.jelipkg:main

[options.package_data]
* = *.eaf, *